--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,6 +33,7 @@ subjects:
 - !lcsh 'Prophecies'
 - !lcc 'HX'
 - !lcsh 'Utopias'
+- GITenberg
 title: 'Anno Domini 2071
 
   Translated from the Dutch Original'
